ChangeLog:

nxcompshad-3.3.0-3

- Fixed TR01G02158. Keymap initialization could be incorrect because
  of a type mismatch on 64 bit platforms.

nxcompshad-3.3.0-2

- Updated VERSION.

nxcompshad-3.3.0-1

- Opened the 3.3.0 branch based on nxcompshad-3.2.0-3.

nxcompshad-3.2.0-3

- Improved keycode translation.

nxcompshad-3.2.0-2

- Solved a problem when sending fake modifier events.

- Added support for keyboard events handling for the web player.

- Changed keycodes translation for Solaris keyboard.

- Corrected a problem for keycodes translation from Solaris keyboard.

- Fixed TR02F02001. In shadow session the shadower's keyboard layout
  could be wrong. Now keycodes are correctly translated if master and
  shadow keyboards have different layouts.

- Added NXShadowGetScreenSize() and NXShadowSetScreenSize() functions,
  so that the shadow session can handle correctly the resize of the
  master session window.

- Solved a compilation problem on GCC 4.3.

nxcompshad-3.2.0-1

- Opened the 3.2.0 branch based on nxcompshad-3.1.0-2.

nxcompshad-3.1.0-2

- Updated file VERSION to match the current release version.

nxcompshad-3.1.0-1

- Opened the 3.1.0 branch based on nxcompshad-3.0.0-19.

nxcompshad-3.0.0-19

- Skip initialization of damage extension if it was already disabled.

nxcompshad-3.0.0-18

- The poller destructor checks if the damage extension is in use.

- Small changes to the function getting the screen content in the case
  damage is not in use.

nxcompshad-3.0.0-17

- Cleanup of some log messages.

nxcompshad-3.0.0-16

- Disabled some log message in the functions initializing the poller.

nxcompshad-3.0.0-15

- Before calling XTest functions, it is checked if the connection to
  master X server has been initialized.

nxcompshad-3.0.0-14

- After the shm segment is created, its mode is changed and it is
  marked for destroying. A check on the number of attaches is done.

nxcompshad-3.0.0-13
