@@ -1,4 +1,4 @@
-Copyright (C) 2001, 2007 NoMachine - http://www.nomachine.com/.
+Copyright (c) 2001, 2009 NoMachine - http://www.nomachine.com/.
 
 NXCOMPSHAD and NX extensions to X are copyright of NoMachine.
 
